@@ -1,0 +1,12 @@
+﻿namespace AjLanguage.Language
+{
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Text;
+
+    public interface IClassicObject : IObject
+    {
+        IClass GetClass();
+    }
+}
